# sgns.rs

./: .gitignore  Cargo.toml  README.md  convert.py
eval/: evaluate.py  performances.pkl  plot-performances.py
src/: io.rs  main.rs  math.rs  preprocess.rs
testdata/: data.txt
