[package]
name = "sgns"
version = "0.1.0"
authors = ["ninpnin <vaino.yrjanainen@aalto.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
ndarray-npy = "0.5"
rand = "0.7.3"
"packed_simd" = ""
"rayon" = ""