[package]
name = "sgns-rs"
version = "0.1.0"
authors = ["ninpnin <vaino.yrjanainen@aalto.fi>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = {version = "*", features = ["rayon"]}
ndarray = "0.13.0"
ndarray-npy = "0.5"
packed_simd = { version = "0.3.6", package = "packed_simd_2" }
rand = "0.8.5"
rayon = "1.5.1"
